--- a/style.css
+++ b/style.css
@@ -5,16 +5,44 @@
 body{
     margin: 0;
     padding: 0;
-    background-image: url('https://images.pexels.com/photos/1210276/pexels-photo-1210276.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
-    background-size: cover;
     overflow-x: hidden;
     font-family: 'Bebas Neue', cursive;
     font-size: 18px;
 }
 
 /*header*/
+.home{
+    display: flex;
+    flex-direction: column;
+    background-image: url('https://images.pexels.com/photos/1210276/pexels-photo-1210276.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    min-height:100vh;
+    background-size: cover;
+}
+.flex-container{
+    text-align: right;
+    height: 50px;
+    line-height: 50px;
+}
+.flex-container a{
+    font-size: 18px;
+    text-decoration: none;
+    color: rgb(250, 250, 245);
+    padding: 15px 15px 15px;
+    text-align: center;
+}
+.nav span{
+    padding: 5px 5px 5px;
+}
+nav a:hover{
+    background-color: #9b527c;
+    transition: all 0.3s ease;
+    border-radius: 10px;
+    text-decoration: none;
+    color: rgb(248, 155, 155);
+}
+
 header{
-    margin-top: 10px;
+    margin-top: 20px;
 }
 header p{
         position: relative;
@@ -40,37 +68,9 @@ header p{
         }
     }
 
-
-.flex-container{
-    display:inline-flex;
-    line-height: 40px;
-    float: right;
-}
-.flex-container a{
-    font-size: 18px;
-    text-decoration: none;
-    color: rgb(250, 250, 245);
-    padding: 15px 15px 15px;
-    text-align: center;
-}
-.nav span{
-    padding: 5px 5px 5px;
-}
-
-nav a:hover{
-    background-color: #570434;
-    transition: all 0.3s ease;
-    border-radius: 10px;
-    text-decoration: none;
-    color: rgb(114, 88, 88);
-}
-
-
 /*mission section*/
 .mission{
-    margin-top:80px;
-    background-color: #8a3659;
-    opacity: .70;
+    margin-top:50px;
     font-family: 'Berkshire Swash', cursive;
     color: antiquewhite;
 }
@@ -81,7 +81,8 @@ nav a:hover{
 
 /* pictures section */
 .container{
-    margin-top: 5%;
+    margin-top: 2%;
+    margin-bottom: 5%;
     width:1800;
     display:flex;
     flex-direction: row;
@@ -180,8 +181,33 @@ nav a:hover{
     transition: all 0.3s ease;
 }
 
+/*----about---*/
 
-
+#about .box-about{
+    display: flex;
+    flex-direction: column;
+    background: url('https://images.pexels.com/photos/4436700/pexels-photo-4436700.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') no-repeat;
+    min-height:100vh;
+    opacity: .80;
+    margin-top:2px;
+    background-size: cover;
+}
+.container-about{
+    margin:auto ;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width:800px;
+    border: #fff 2px solid;
+    color: rgb(184, 70, 4);
+   
+}
+.container-about h3{
+    text-align: center;
+    font-family: 'Berkshire Swash', cursive;
+    font-size: 35px;
+    text-decoration: none;
+}
 footer{
     font-size: 12px;
     margin-top:50px;
