--- a/style.css
+++ b/style.css
@@ -291,6 +291,7 @@ body{
     align-items: center;
     width:100%;
     height: 100vh;
+    z-index: 1;
     background: url('./resources/Ashley-8.jpg') no-repeat center center/cover;
 }
 
@@ -305,6 +306,7 @@ body{
     font-size: 3rem;
     color: #f8c296;
     font-family: 'Yesteryear', cursive;
+    z-index:3;
 }
 .about-me img{
     width:300px;
